--- a/Entrega2-war/nbproject/project.properties
+++ b/Entrega2-war/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.primefaces-5.2.jar=C:\\SII\\primefaces-5.2.jar
+file.reference.primefaces-5.2.jar=../primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
