--- a/Entrega2-war/web/WEB-INF/web.xml
+++ b/Entrega2-war/web/WEB-INF/web.xml
@@ -21,4 +21,12 @@
     <welcome-file-list>
         <welcome-file>faces/login.xhtml</welcome-file>
     </welcome-file-list>
+    
+    
+    
+    <context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>redmond</param-value>
+	</context-param>
+    
 </web-app>
